jp-postal-code/src/infra/snapshots/jp_postal_code__infra__postgres__tests__utf_ken_all_repository_postgres_search_page_size_and_page_token-2.snap
---
source: jp-postal-code/src/infra/postgres.rs
expression: response
---
UtfKenAllRepositorySearchResponse {
    records: [
        UtfKenAllRecord {
            local_government_code: "01101",
            old_postal_code: "060  ",
            postal_code: "0600042",
            prefecture_kana: "ホッカイドウ",
            city_kana: "サッポロシチュウオウク",
            town_kana: "オオドオリニシ（１−１９チョウメ）",
            prefecture: "北海道",
            city: "札幌市中央区",
            town: "大通西（１〜１９丁目）",
            has_multi_postal_code: 1,
            has_chome: 0,
            has_multi_town: 1,
            update_code: 0,
            update_reason: 0,
        },
    ],
    next_page_token: None,
}
